<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SignupActivity" android:background="@color/colorPrimaryDark">

    <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp" app:srcCompat="@drawable/splash_logo"
            android:id="@+id/mama"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="60dp" app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/imgCD"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/rUsername"
            android:hint="@string/userName" android:textColorHint="@color/colorAccent" android:padding="8dp"
            android:background="@drawable/edit_text_container"
            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/mama"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:textColor="@color/btnText"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/rEmail" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/rUsername" android:hint="@string/email"
            android:textColorHint="@color/colorAccent" android:background="@drawable/edit_text_container"
            app:layout_constraintEnd_toEndOf="@+id/rUsername" app:layout_constraintStart_toStartOf="@+id/rUsername"
            android:padding="8dp" android:textColor="@color/btnText"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/rPassword" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/rEmail"
            app:layout_constraintEnd_toEndOf="@+id/rEmail" app:layout_constraintStart_toStartOf="@+id/rEmail"
            android:hint="@string/passcode" android:textColorHint="@color/colorAccent"
            android:background="@drawable/edit_text_container" android:padding="8dp"
            android:textColor="@color/btnText"/>
    <Button
            android:text="@string/signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/signup" app:layout_constraintEnd_toEndOf="@+id/rPassword"
            android:layout_marginTop="30dp" app:layout_constraintTop_toBottomOf="@+id/rPassword"
            android:background="@drawable/buttons" android:textColorHint="@color/colorAccent"
            android:textColor="@color/colorAccent"/>
    <TextView
            android:text="@string/haveAc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/haveAc" android:layout_marginTop="45dp"
            app:layout_constraintTop_toBottomOf="@+id/rPassword" app:layout_constraintStart_toStartOf="@+id/rPassword"
            android:textColor="@color/colorPrimary"/>

    <ProgressBar
            android:id="@+id/loadProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/signup"
            app:layout_constraintEnd_toEndOf="@+id/signup"
            app:layout_constraintTop_toTopOf="@+id/signup"
            app:layout_constraintBottom_toBottomOf="@+id/signup"/>
</android.support.constraint.ConstraintLayout>