<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity"
        android:background="@color/colorPrimaryDark">

    <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:srcCompat="@drawable/splash_logo"
            android:id="@+id/mama"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/imgCD"/>
    <EditText
            android:layout_width="316dp"
            android:layout_height="53dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/email"
            android:textColor="@color/btnText"
            android:hint="@string/email"
            android:fontFamily="@font/amita"
            android:textColorHint="@color/colorAccent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@drawable/edit_text_container"
            android:padding="8dp"
            android:textSize="18sp"
            android:layout_marginBottom="33dp"
            app:layout_constraintBottom_toTopOf="@+id/passcode"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/mama"/>
    <EditText
            android:layout_width="0dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passcode"
            android:layout_height="wrap_content" android:background="@drawable/edit_text_container"
            android:textColorHint="@color/colorAccent" android:textColorLink="@color/btnText"
            android:textColor="@color/btnText" android:hint="@string/passcode" android:padding="8dp"
            android:fontFamily="@font/amita" android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/email"
            app:layout_constraintEnd_toEndOf="@+id/email"
            app:layout_constraintStart_toStartOf="@+id/email"/>
    <Button
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:layout_height="51dp"
            android:id="@+id/login" android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@+id/passcode" app:layout_constraintEnd_toEndOf="@+id/passcode"
            android:background="@drawable/buttons" android:textColor="@color/colorAccent"
            android:fontFamily="@font/amita"/>
    <TextView
            android:text="@string/noAc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/noAc" app:layout_constraintStart_toStartOf="@+id/passcode"
            android:layout_marginTop="45dp"
            app:layout_constraintTop_toBottomOf="@+id/passcode" android:textColor="@color/colorPrimary"/>


</android.support.constraint.ConstraintLayout>